feat(vin)：优化生成车架号的代码，优化文档

--- a/docs/200815-vin.md
+++ b/docs/200815-vin.md
@@ -40,7 +40,7 @@ const LOCATION_WEIGHT_MAP = {
 
 ### 3. 车辆指示部分（vehicle indicator section，***VIS***）。
 VIS 第一位（VIN 第十位）代表年份。年份代码表（30 年循环一次）。从 2001~2030 的代码（按顺序）为：
-`123456789ABCDEFGHJKLMNPRSTVXY`
+`123456789ABCDEFGHJKLMNPRSTVXY`
 
 ![年产量1000及以上厂商 VIN 码](./assets/vin1.png)
 ![年产量1000以下厂商 VIN 码](./assets/vin2.png)
